<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/corner_radius_small"
    android:padding="10dp">

    <TextView
        android:id="@+id/vacancyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/barlow_bold"
        android:text="@string/text_search_vacancy_title"
        android:textColor="@color/text_primary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/vacancyBand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/barlow_bold"
        android:text="@string/text_search_vacancy_band"
        android:textColor="@color/text_primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/vacancyText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/barlow_medium"
        android:text="@string/text_search_vacancy_text"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vacancyTitle"/>

    <TextView
        android:id="@+id/vacancySalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/barlow_medium"
        android:text="@string/text_search_vacancy_salary"
        android:textColor="@color/text_primary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vacancyText"/>

    <TextView
        android:id="@+id/vacancyDatetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/barlow_thin"
        android:text="@string/text_search_vacancy_datetime"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>