<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resumeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_radius_small"
        android:padding="10dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/vacancyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_bold"
            android:text="@string/text_search_vacancy_title"
            android:textColor="@color/text_primary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/vacancyBand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_bold"
            android:text="@string/text_search_vacancy_band"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/vacancyGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_bold"
            android:text="@string/text_search_vacancy_genres"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vacancyTitle" />

        <TextView
            android:id="@+id/vacancySalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_medium"
            android:text="@string/text_search_vacancy_salary"
            android:textColor="@color/text_primary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vacancyBand" />

        <TextView
            android:id="@+id/vacancyTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/barlow_semibold"
            android:text="@string/text_search_vacancy_text_title"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vacancyGenres" />

        <TextView
            android:id="@+id/vacancyText"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:fontFamily="@font/barlow_medium"
            android:text="@string/text_search_vacancy_text"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vacancyTextTitle" />

        <TextView
            android:id="@+id/resumeTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/barlow_semibold"
            android:text="@string/text_resume_history_text_title"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vacancyText" />

        <TextView
            android:id="@+id/resumeText"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:fontFamily="@font/barlow_medium"
            android:text="@string/text_search_vacancy_text"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resumeTextTitle" />

        <TextView
            android:id="@+id/resumeDatetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_thin"
            android:text="@string/text_resume_history_datetime"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resumeText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/resumeStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:paddingVertical="5dp"
        android:background="@drawable/corner_radius_status_new"
        android:fontFamily="@font/barlow_bold"
        android:text="@string/text_resume_status"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumeLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>